python_card_parser/lib/CardParser.py
# Generated from Card.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CardParser ( Parser ):

    grammarFileName = "Card.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'.'", "'whenever'", "'when'", 
                     "'after combat'", "'at the end of the turn'", "'i'", 
                     "'am'", "'a player plays a nonunit spell targeting me'", 
                     "'you play me'", "'my column deals combat damage'", 
                     "'dealt damage'", "'modded or applied as a mod'", "'survive damage'", 
                     "'die'", "'spawn'", "'despawn'", "'attack'", "'block'", 
                     "'attack in a formation of'", "'or more units'", "'become targeted'", 
                     "'a'", "'another'", "'unit token'", "'is created'", 
                     "'nontoken unit'", "'dies'", "'nontoken enemy'", "'nontoken ally'", 
                     "'spawns'", "'unit'", "'ally'", "'spawns during battle'", 
                     "'card'", "'enters a player's hand during battle'", 
                     "'a player'", "'another player'", "'loses life'", "'loses life during battle'", 
                     "'loses is dealt combat damage'", "'plays a spell'", 
                     "'plays their first spell in this battle'", "'you'", 
                     "'play a spell'", "'play a spell during battle'", "'put a counter on an enemy'", 
                     "'create a token'", "'sacrifice a unit'", "'play a nontoken spell'", 
                     "'are dealt combat damage'", "'deal combat damage to an opponent'", 
                     "'put one or more counters on an ally'", "'play a unit'", 
                     "'apply an augment during battle'", "'do'", "'play a token spell'", 
                     "', then'", "'target'", "'gains'", "'for each of your units'", 
                     "'and'", "'until regroup'", "'i deal'", "'x'", "'damage'", 
                     "'to'", "'each'", "'player'", "'opponent'", "'for each blocked column'", 
                     "'me'", "'enemy'", "'of your units'", "'of the chosen units'", 
                     "'put'", "'on'", "'your units gain'", "'for each of your'", 
                     "'units'", "'counter'", "'/'", "'flying'", "'piercing'", 
                     "'recall'", "'ambush'", "'fight'", "'glimpse'", "'rockfall'", 
                     "'[graft'", "']'", "'[augment]'", "'[once]'", "'['", 
                     "'r'", "'b'", "'e'", "'g'", "'m'", "'equal to my'", 
                     "'defense'", "'equal to your'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER_WORD", 
                      "DIGIT", "SIGN", "COMMENT", "META", "PSUDO_NEWLINE", 
                      "SPACE", "NEWLINE" ]

    RULE_prog = 0
    RULE_effect = 1
    RULE_trigger = 2
    RULE_event = 3
    RULE_unit_event = 4
    RULE_unit_event_inner = 5
    RULE_board_event = 6
    RULE_board_event_inner = 7
    RULE_player_event = 8
    RULE_player_event_inner = 9
    RULE_you_event = 10
    RULE_you_event_inner = 11
    RULE_action = 12
    RULE_action_buff = 13
    RULE_action_deal_damage = 14
    RULE_counter_target = 15
    RULE_action_put_counter = 16
    RULE_action_stat_change = 17
    RULE_region_derived_quantity = 18
    RULE_lifetime = 19
    RULE_counter = 20
    RULE_stat = 21
    RULE_evergreen_keyword = 22
    RULE_keyword = 23
    RULE_mod = 24
    RULE_graft = 25
    RULE_augment = 26
    RULE_affinity = 27
    RULE_signed_int = 28
    RULE_amount = 29
    RULE_amount_item = 30
    RULE_unit_derived_quantity = 31

    ruleNames =  [ "prog", "effect", "trigger", "event", "unit_event", "unit_event_inner", 
                   "board_event", "board_event_inner", "player_event", "player_event_inner", 
                   "you_event", "you_event_inner", "action", "action_buff", 
                   "action_deal_damage", "counter_target", "action_put_counter", 
                   "action_stat_change", "region_derived_quantity", "lifetime", 
                   "counter", "stat", "evergreen_keyword", "keyword", "mod", 
                   "graft", "augment", "affinity", "signed_int", "amount", 
                   "amount_item", "unit_derived_quantity" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    NUMBER_WORD=103
    DIGIT=104
    SIGN=105
    COMMENT=106
    META=107
    PSUDO_NEWLINE=108
    SPACE=109
    NEWLINE=110

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CardParser.EOF, 0)

        def effect(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CardParser.EffectContext)
            else:
                return self.getTypedRuleContext(CardParser.EffectContext,i)


        def getRuleIndex(self):
            return CardParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = CardParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 576460752303423608) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 335564801) != 0):
                self.state = 64
                self.effect()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(CardParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EffectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trigger(self):
            return self.getTypedRuleContext(CardParser.TriggerContext,0)


        def action(self):
            return self.getTypedRuleContext(CardParser.ActionContext,0)


        def mod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CardParser.ModContext)
            else:
                return self.getTypedRuleContext(CardParser.ModContext,i)


        def getRuleIndex(self):
            return CardParser.RULE_effect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEffect" ):
                listener.enterEffect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEffect" ):
                listener.exitEffect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEffect" ):
                return visitor.visitEffect(self)
            else:
                return visitor.visitChildren(self)




    def effect(self):

        localctx = CardParser.EffectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_effect)
        self._la = 0 # Token type
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5, 6, 90, 92]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==90 or _la==92:
                    self.state = 72
                    self.mod()


                self.state = 75
                self.trigger()
                self.state = 76
                self.match(CardParser.T__0)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==90 or _la==92:
                    self.state = 77
                    self.mod()


                self.state = 80
                self.action(0)
                self.state = 81
                self.match(CardParser.T__1)
                pass
            elif token in [59, 64, 76, 78]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.action(0)
                self.state = 84
                self.match(CardParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TriggerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CardParser.RULE_trigger

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EndOfTurnTriggerContext(TriggerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CardParser.TriggerContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndOfTurnTrigger" ):
                listener.enterEndOfTurnTrigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndOfTurnTrigger" ):
                listener.exitEndOfTurnTrigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndOfTurnTrigger" ):
                return visitor.visitEndOfTurnTrigger(self)
            else:
                return visitor.visitChildren(self)


    class EventTriggerContext(TriggerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CardParser.TriggerContext
            super().__init__(parser)
            self.trigger_word = None # Token
            self.copyFrom(ctx)

        def event(self):
            return self.getTypedRuleContext(CardParser.EventContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventTrigger" ):
                listener.enterEventTrigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventTrigger" ):
                listener.exitEventTrigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventTrigger" ):
                return visitor.visitEventTrigger(self)
            else:
                return visitor.visitChildren(self)


    class AfterCombatTriggerContext(TriggerContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CardParser.TriggerContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAfterCombatTrigger" ):
                listener.enterAfterCombatTrigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAfterCombatTrigger" ):
                listener.exitAfterCombatTrigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAfterCombatTrigger" ):
                return visitor.visitAfterCombatTrigger(self)
            else:
                return visitor.visitChildren(self)



    def trigger(self):

        localctx = CardParser.TriggerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_trigger)
        self._la = 0 # Token type
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                localctx = CardParser.EventTriggerContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                localctx.trigger_word = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    localctx.trigger_word = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 89
                self.event()
                pass
            elif token in [5]:
                localctx = CardParser.AfterCombatTriggerContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(CardParser.T__4)
                pass
            elif token in [6]:
                localctx = CardParser.EndOfTurnTriggerContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(CardParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit_event(self):
            return self.getTypedRuleContext(CardParser.Unit_eventContext,0)


        def board_event(self):
            return self.getTypedRuleContext(CardParser.Board_eventContext,0)


        def you_event(self):
            return self.getTypedRuleContext(CardParser.You_eventContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvent" ):
                return visitor.visitEvent(self)
            else:
                return visitor.visitChildren(self)




    def event(self):

        localctx = CardParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_event)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 9, 10, 11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.unit_event()
                pass
            elif token in [23, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.board_event()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.you_event()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unit_eventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit_event_inner(self):
            return self.getTypedRuleContext(CardParser.Unit_event_innerContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_unit_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit_event" ):
                listener.enterUnit_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit_event" ):
                listener.exitUnit_event(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit_event" ):
                return visitor.visitUnit_event(self)
            else:
                return visitor.visitChildren(self)




    def unit_event(self):

        localctx = CardParser.Unit_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unit_event)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(CardParser.T__6)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 100
                    self.match(CardParser.T__7)


                self.state = 103
                self.unit_event_inner()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(CardParser.T__8)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(CardParser.T__9)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.match(CardParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unit_event_innerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def amount(self):
            return self.getTypedRuleContext(CardParser.AmountContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_unit_event_inner

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit_event_inner" ):
                listener.enterUnit_event_inner(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit_event_inner" ):
                listener.exitUnit_event_inner(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit_event_inner" ):
                return visitor.visitUnit_event_inner(self)
            else:
                return visitor.visitChildren(self)




    def unit_event_inner(self):

        localctx = CardParser.Unit_event_innerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unit_event_inner)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(CardParser.T__11)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(CardParser.T__12)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.match(CardParser.T__13)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.match(CardParser.T__14)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.match(CardParser.T__15)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.match(CardParser.T__16)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.match(CardParser.T__17)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.match(CardParser.T__18)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 9)
                self.state = 117
                self.match(CardParser.T__19)
                self.state = 118
                self.amount()
                self.state = 119
                self.match(CardParser.T__20)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 10)
                self.state = 121
                self.match(CardParser.T__21)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Board_eventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.subject = None # Token
            self.inner = None # Board_event_innerContext

        def board_event_inner(self):
            return self.getTypedRuleContext(CardParser.Board_event_innerContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_board_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoard_event" ):
                listener.enterBoard_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoard_event" ):
                listener.exitBoard_event(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoard_event" ):
                return visitor.visitBoard_event(self)
            else:
                return visitor.visitChildren(self)




    def board_event(self):

        localctx = CardParser.Board_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_board_event)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                localctx.subject = self.match(CardParser.T__22)
                self.state = 125
                localctx.inner = self.board_event_inner()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                localctx.subject = self.match(CardParser.T__23)
                self.state = 127
                localctx.inner = self.board_event_inner()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Board_event_innerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # Token
            self.event_ = None # Token


        def getRuleIndex(self):
            return CardParser.RULE_board_event_inner

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoard_event_inner" ):
                listener.enterBoard_event_inner(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoard_event_inner" ):
                listener.exitBoard_event_inner(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoard_event_inner" ):
                return visitor.visitBoard_event_inner(self)
            else:
                return visitor.visitChildren(self)




    def board_event_inner(self):

        localctx = CardParser.Board_event_innerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_board_event_inner)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                localctx.type_ = self.match(CardParser.T__24)
                self.state = 131
                localctx.event_ = self.match(CardParser.T__25)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                localctx.type_ = self.match(CardParser.T__26)
                self.state = 133
                localctx.event_ = self.match(CardParser.T__27)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                localctx.type_ = self.match(CardParser.T__28)
                self.state = 135
                localctx.event_ = self.match(CardParser.T__27)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                localctx.type_ = self.match(CardParser.T__29)
                self.state = 137
                localctx.event_ = self.match(CardParser.T__30)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                localctx.type_ = self.match(CardParser.T__31)
                self.state = 139
                localctx.event_ = self.match(CardParser.T__27)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                localctx.type_ = self.match(CardParser.T__32)
                self.state = 141
                localctx.event_ = self.match(CardParser.T__30)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                localctx.type_ = self.match(CardParser.T__32)
                self.state = 143
                localctx.event_ = self.match(CardParser.T__33)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 144
                localctx.type_ = self.match(CardParser.T__34)
                self.state = 145
                localctx.event_ = self.match(CardParser.T__35)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Player_eventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.subject = None # Token
            self.inner = None # Player_event_innerContext

        def player_event_inner(self):
            return self.getTypedRuleContext(CardParser.Player_event_innerContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_player_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlayer_event" ):
                listener.enterPlayer_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlayer_event" ):
                listener.exitPlayer_event(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlayer_event" ):
                return visitor.visitPlayer_event(self)
            else:
                return visitor.visitChildren(self)




    def player_event(self):

        localctx = CardParser.Player_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_player_event)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                localctx.subject = self.match(CardParser.T__36)
                self.state = 149
                localctx.inner = self.player_event_inner()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                localctx.subject = self.match(CardParser.T__37)
                self.state = 151
                localctx.inner = self.player_event_inner()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Player_event_innerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

